build: add basic configuration
Create profiles (dev, test) and create basic configuration for each of them. Add spring security basic config. Add logs configuration

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -36,3 +35,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### LOGS ###
+/logs/*
