--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+### PROFILE ###
+spring.profiles.active=test
+
+### SERVER ###
+server.port=8090
+server.error.include-message=always
+#server.servlet.context-path=/moovelo TODO: do ustalenia z reszta grupy
+
+### SWAGGER ###
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+### LIQUIBASE ###
+spring.liquibase.enabled=false
+
+### HIBERNATE ###
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+### LOGS ###
+logging.file.name=logs/app.log
+
+
+
+
