--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,9 +2,9 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:mooveloDB;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.path=/h2
 spring.datasource.username=sa
 spring.datasource.password=
-
 
 ### LIQUIBASE ###
 spring.liquibase.enabled=false
