--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,33 @@
-### PROFILE ###
-spring.profiles.active=test
 ### SERVER ###
 server.port=8090
 server.error.include-message=always
 #server.servlet.context-path=/moovelo TODO: do ustalenia z reszta grupy
+
 ### SWAGGER ###
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
 ### HIBERNATE ###
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
 ### LOGS ###
 logging.file.name=logs/app.log
+
+### H2 DATABASE ###
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:mooveloDB;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.path=/h2
+spring.datasource.username=sa
+spring.datasource.password=
+
+### JPA ###
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-locations=classpath:db/data/*.sql
 
 
 
