--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,11 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:db/data/*.sql
+
+### MAIL ###
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=4875e058da0f9c
+spring.mail.password=d024b7bfa107cd
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.properties.mail.smtp.starttls.enable=true
