feat: add visitor add/remove to event with mailing service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active = test
+spring.profiles.active = dev
 
 ### SERVER ###
 server.port=8090
@@ -32,9 +32,9 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:db/data/*.sql
 
 ### MAIL ###
-spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.host=smtp.gmail.com
 spring.mail.port=25
-spring.mail.username=4875e058da0f9c
-spring.mail.password=d024b7bfa107cd
-spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.username=moovelo.envelo@gmail.com
+spring.mail.password=gtyqhmtmsxqhewwg
+spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
